<resources>
    <string name="app_name">library</string>
    <string name="title_activity_main">MainActivity</string>
    <string name="navigation_drawer_open">Open navigation drawer</string>
    <string name="navigation_drawer_close">Close navigation drawer</string>
    <string name="nav_header_title">Android Studio</string>
    <string name="nav_header_subtitle">android.studio@android.com</string>
    <string name="nav_header_desc">Navigation header</string>
    <string name="action_settings">Settings</string>

    <string name="menu_home">Home</string>
    <string name="menu_gallery">Gallery</string>
    <string name="menu_slideshow">Slideshow</string>
    <string name="kirish">kirish</string>
    <string name="alisher_navoiy_hayoti_va_ijodi">Alisher Navoiy hayoti va ijodi</string>
    <string name="sobirjanovyusufjon_gmail_com">sobirjanovyusufjon@gmail.com</string>
    <string name="library">library</string>
    <string name="add">Add+</string>
    <string name="kitob_nomini_kiriting">Kitob nomini kiriting</string>
    <string name="qoshish">Qo\'shish</string>
    <string name="matn_kriting">matn kriting</string>
    <string name="slideshow">Slideshow</string>
    <string name="yo_q">YO`Q</string>
    <string name="siz_xaqiqatdan_xam_o_chirmoqchimisiz">Siz xaqiqatdan xam o\'chirmoqchimisiz?</string>
    <string name="ha">HA</string>
    <string name="tarmoq">Tarmoq</string>

    <string-array name="home_list">
        <item>Uzbek Adabiyoti</item>
        <item>Jahon Adabiyoti</item>
        <item>5-sinf kitoblari</item>
        <item>6-sinf kitoblari</item>
        <item>7-sinf kitoblari</item>
        <item>8-sinf kitoblari</item>
        <item>9-sinf kitoblari</item>
        <item>10-sinf kitoblari</item>
        <item>11-sinf kitoblari</item>
        <item>Zarur kitoblar</item>

    </string-array>
</resources>