<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@drawable/addbook"
    android:gravity="center"
    android:orientation="vertical">

    <Spinner
        android:id="@+id/spinner"
        android:layout_width="match_parent"
        android:layout_height="40dp"
        android:layout_margin="10dp"
        android:background="@drawable/bg_edit"
        android:gravity="center"
        android:hint="@string/kitob_nomini_kiriting"
        android:padding="10dp"
        android:textSize="22sp" />


    <EditText
        android:id="@+id/book_name"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_margin="10dp"
        android:background="@drawable/bg_edit"
        android:gravity="center"
        android:hint="@string/kitob_nomini_kiriting"
        android:padding="10dp"
        android:textSize="22sp" />

    <EditText
        android:id="@+id/book_text"
        android:layout_width="match_parent"
        android:layout_height="400dp"
        android:layout_margin="10dp"
        android:background="@drawable/bg_edit"
        android:gravity="center"
        android:hint="@string/matn_kriting"
        android:padding="20dp" />

    <Button
        android:id="@+id/qoshish_btn"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_gravity="center_horizontal"
        android:text="@string/qoshish" />
</LinearLayout>